--- a/sobre.html
+++ b/sobre.html
@@ -26,8 +26,8 @@
         </header>
 
     <!--Bloco Sobre-->
-    <div class="div1"><b>Sobre o stúdio:</b><br><br>Seja Bem Vinda (o)!<br><br><br>
-      O Stúdio Bárbara Sinhorini é especialista em Design de Sobrancelhas e Alongamento de Cílios.<br><br>
+    <div class="div1"><b>Sobre o studio:</b><br><br>Seja Bem Vinda (o)!<br><br><br>
+      O Studio Bárbara Sinhorini é especialista em Design de Sobrancelhas e Alongamento de Cílios.<br><br>
       Atende sua clientela sempre da melhor forma. Fazendo sempre com amor e dedicação. Além das habilidades e técnicas, educamos a cliente sempre que necessário sobre os cuidados do pós Alongamento/Design, e dicas para manter e cuidar da sua beleza.
       </div>
 
