--- a/sobre.html
+++ b/sobre.html
@@ -96,7 +96,7 @@
       <div class="main_footer_copy">
           
           <p class="m-b-footer"> Stúdio Bárbara Sinhorini - 2022, todos os direitos reservados.</p> 
-          <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="https://github.com/GustavoAlexB" title="Seu nome">Gustavo Bercelino - Matheus Fante - Estevao Borges</a></p>
+          <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="https://github.com/GustavoAlexB" target="_blank" title="Seu nome">Gustavo Bercelino - Matheus Fante - Estevao Borges</a></p>
       
       </div>
   </footer>
